2006-08-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderMenu.m ([UIxMailFolderMenu
	-iconForMenuItem]): new method that returns the fully qualified
	relative URL to the icon representing the mailbox, or the default
	mailbox icon if needed.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-urlForResourceFilename:filename]): automatically return an empty
	string whenever the filename passed as argument is nil.

	* UI/WebServerResources/MailerUI.js: open the mailboxes with the
	"desc" parameter set to 1 so that they are sorted in descending
	order by default. Also, added "onHeaderClick()", triggered by
	clicking on the message list header elements.

	* UI/MailerUI/UIxMailSortableTableHeader.m
	([UIxMailSortableTableHeader -isSortedDescending]): same as below.

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-isSortedDescending]): defaults to "YES" when the sort order is
	not specified.

2006-07-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/MailerUI.js:
	- message cache: set the max num of cached messages to 20. Limit
	the cached message size to 30000 bytes.
	- ajax: when a message request is called while one is already
	being performed, the latter will be cancelled. Idem when
	retrieving the content of a mailbox.
	- folder tree: when a mailbox is selected because of the URL
	requested (initMailboxSelection), the dtree is expanded throughout
	the mailbox entry's parent hierarchy to ensure it is made visible
	when the page is being displayed. (new function: expandUpperTree).
	- mailbox loading: when loading a mailbox where a message was
	previously selected, we invoke its url with the "pageforuid"
	parameter correctly specified. During callback processing, we scan
	the table for the related row and reselect it.
	Also, the message area is set blank before loading any mailbox.

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-defaultAction]): if the "pageforuid" parameter is passed in the